<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">ARM Weather Station</string>

    <string name="nav_connect">Connect</string>
    <string name="nav_data">Data</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="connect_to">Connect to </string>
    <string name="disconnect">DISCONNECT</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="connected">Connected</string>

    <string name="discovering">Discovering</string>
    <string name="bluetooth_not_found">Bluetooth not found</string>
    <string name="open_bluetooth_first">Open bluetooth first</string>
    <string name="start_discovery_failed">Start discovery failed</string>
    <string name="discovery_finished">Discovery finished</string>

    <string name="data_temp">TEMP</string>
    <string name="data_hum">HUM</string>
    <string name="data_pres">PRES</string>
    <string name="data_acc">ACC</string>
    <string name="data_gyro">GYRO</string>
    <string name="data_mag">MAG</string>

    <string name="data_current">Current</string>
    <string name="data_average">Average</string>
    <string name="data_history">History</string>
</resources>
