<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_bluetooth_black_24dp"
            android:title="@string/nav_connect"
            android:checked="true"/>
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_content_copy_black_24dp"
            android:title="@string/nav_data"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about"/>
    </group>

</menu>